Fixed overflow after 1001px width.

--- a/twitterclone/assets/css/main.css
+++ b/twitterclone/assets/css/main.css
@@ -289,7 +289,8 @@ body {
 
 @media screen and (min-width: 1101px) {
     .hero {
-        height: 95vh;
+        min-height: 92vh;
+        max-height: 95vh;
     }
 
     .hero-login {
